Add id attribute to title in index.html and define styles for #title in style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,11 @@ iframe {
   background-color: black;
 }
 
+#title {
+	text-align: center;
+	border: 1px solid green;
+}
+
 #log-container {
   display: flex;
   flex: 1;
